--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production --progress"
+    },
+    "dependencies": {
+        "autoprefixer": "^10.4.16",
+        "node-sass": "^9.0.0",
+        "postcss-loader": "^7.3.3",
+        "sass-loader": "^13.3.2"
     }
 }
