--- a/.env
+++ b/.env
@@ -38,4 +38,5 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
+MAILER_DSN=smtp://78ecad4ae0637d:005a5cb2fe188c@sandbox.smtp.mailtrap.io:2525
 ###< symfony/mailer ###
