--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "build": "encore production --progress"
   },
   "dependencies": {
+    "@fullcalendar/core": "^6.1.15",
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/interaction": "^6.1.15",
+    "@fullcalendar/timegrid": "^6.1.15",
     "autoprefixer": "^10.4.16",
     "bootstrap": "^5.3.2",
     "node-sass": "^9.0.0",
